@@ -1,0 +1,23 @@
+# Generated by Django 5.1 on 2024-08-19 05:12
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Work', '0004_experiences_entry_num'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='experiences',
+            name='company_linkedin',
+            field=models.CharField(blank=True, max_length=700, null=True),
+        ),
+        migrations.AddField(
+            model_name='experiences',
+            name='company_url',
+            field=models.CharField(blank=True, max_length=700, null=True),
+        ),
+    ]
