@@ -1,0 +1,18 @@
+# Generated by Django 5.1 on 2024-08-19 06:42
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Work', '0005_experiences_company_linkedin_experiences_company_url'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='experiences',
+            name='department',
+            field=models.CharField(blank=True, max_length=200, null=True),
+        ),
+    ]
