@@ -7,6 +7,7 @@ class Experiences(models.Model):
     company_name = models.CharField(max_length=200, null=True, blank=True)
     company_image_url = models.CharField(max_length=700, null=True, blank=True)
     designation = models.CharField(max_length=200, null=True, blank=True)
+    department = models.CharField(max_length=200, null=True, blank=True)
     start_year = models.CharField(max_length=5, null=True, blank=True)
     end_year = models.CharField(max_length=10, null=True, blank=True)
     total_years = models.CharField(max_length=5, null=True, blank=True)
@@ -18,6 +19,8 @@ class Experiences(models.Model):
     duty2 = models.CharField(max_length=800, null=True, blank=True)
     duty3 = models.CharField(max_length=800, null=True, blank=True)
     duty4 = models.CharField(max_length=800, null=True, blank=True)
+    company_url = models.CharField(max_length=700, null=True, blank=True)
+    company_linkedin = models.CharField(max_length=700, null=True, blank=True)
 
 
 
