@@ -87,8 +87,10 @@
 
     <div class="row">
 
-        <div class="col-md-8 d-flex justify-content-center">
-            <img  src={{experience.company_image_url}} alt="company-image" class="w-50 m-auto" id="hover-section" style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
+        <div class="col-md-8">
+            <a href="{% url 'singlework' experience.id %}" class="d-flex justify-content-center pt-md-5">
+                <img  src={{experience.company_image_url}} alt="company-image" id="hover-section" class="w-50 mt-md-5" style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
+            </a>
         </div>
 
 
@@ -187,10 +189,13 @@
             </div>
         </div>
 
-            <div class="col-md-8 d-flex justify-content-center">
-                <img  src={{experience.company_image_url}} alt="company-image" class="w-50 m-auto" id="hover-section" style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
-            </div>
-    </div>
+        <div class="col-md-8">
+            <a href="{% url 'singlework' experience.id %}" class="d-flex justify-content-center pt-md-5">
+                <img  src={{experience.company_image_url}} alt="company-image" id="hover-section" class="w-50 mt-md-5" style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
+            </a>
+        </div>
+ 
+</div>
 
 
 
@@ -198,7 +203,7 @@
 
 
     <br><br>
-    <div class="container"><hr></div>
+    <div class="container bg-secondary"><hr></div>
     <br><br>
 
     {% endfor %}
@@ -208,30 +213,6 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div style="margin-top: 1200px;"></div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
