@@ -1,0 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- custom css connect -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+
+    <!-- Bootstrap Connect -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone&family=New+Amsterdam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Jersey+10&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Jersey+10&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <title>yd - portfolio</title>
+</head>
+<body style="background-image: linear-gradient(#4b6cc11a, #fff 100vh);">
+
+<!-- Navigation -->
+<nav class="navbar navbar-light px-5" >
+    <a class="navbar-brand " href="{% url 'About' %}">
+        <img src="https://portfolio--bucket.s3.eu-north-1.amazonaws.com/My+Logo.svg" alt="My Logo" width="75px">
+    </a>
+
+    <div class="jsutify-content-end mx-5">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="{% url 'work' %}" class="nav-link">
+                    <i class="bi bi-arrow-left-circle-fill font-weight-bold" style="font-size: 45px;"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!-- End of Navigation -->
+
+<!-- Heading Company Title -->
+<div class="container text-center">
+    <br><br><br><br>
+    <h1 class=" dm-serif-text-regular">{{single_work.company_name}}</h1>
+    <br>
+    <h1 class="dm-serif-text-regular-italic text-primary" style="font-size: x-large;"><i class="bi bi-geo-alt-fill" style="font-size: x-large;"></i> {{single_work.location}}</h1>
+    <hr>
+    <br><br><br>
+</div>
+<!-- End of Heading -->
+
+<!-- Company details as rows -->
+ <!-- image and link row -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 ">
+            <div class="d-flex justify-content-center" >
+                <img  src={{single_work.company_image_url}} alt="company-image" class="w-75 m-5"  style="background-color: aliceblue;box-shadow: 0 0 5px hwb(0 50% 49%); border-radius: 12px;">
+            </div>
+            <div class="d-flex justify-content-center mb-4">
+                {% if single_work.company_url %}
+                <a href={{single_work.company_url}} target="_blank"><i class="bi bi-globe2 mx-3" id="hover-section" style="color: black;"></i></a>
+                {% endif %}
+
+                {% if single_work.company_linkedin %}
+                <a href={{single_work.company_linkedin}} target="_blank"><i class="bi bi-linkedin mx-3" id="hover-section" style="color: black;"></i></a>
+                {% endif %}
+            </div>
+        </div>
+<!-- ending image and link row -->
+ <!-- other details row -->
+        <div class="col-md-8 p-5 text-left">
+            <h1 class="khand-semibold">{{single_work.designation}}</h1>
+            <br>
+            <h1 class="khand-medium">{{single_work.department}}</h1>
+            <div class="d-flex justify-content-start khand-regular">
+                <p class="border rounded-pill mr-2 p-2" style="background-color: aliceblue;">{{single_work.start_year}}-{{single_work.end_year}}</p>
+                <p class="border rounded-pill ml-2 p-2" style="background-color: aliceblue;">{{single_work.total_years}} year{{single_work.total_years|pluralize:'s'}}</p>
+            </div>
+            <br>
+            <h1 class="khand-medium">Role Description</h1>
+            <br>
+            <p class="khand-regular text-justify">{{single_work.long_description}}</p>
+            <br>
+            <h1 class="khand-medium">Technologies Used</h1>
+            <br>
+            <div class="row khand-regular ml-1">
+                {% for tech in tech_list %}
+                <p class="col-sm-3 mr-2 mb-3 p-2 rounded-pill text-center" style="background-color: aliceblue;">{{tech}}</p>
+                {% endfor %}
+            </div>
+
+            
+        </div>
+    </div>
+</div>
+
+<!-- end other details row -->
+<!-- End of company details -->
+
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+</body>
+</html>
