@@ -4,5 +4,6 @@ from django.urls import path,include
 from . import views
 
 urlpatterns = [
-    path('', views.WorkPage, name='work')
+    path('', views.WorkPage, name='work'),
+    path('<str:pk>/',views.SingleWorkPage, name='singlework'),
 ]
