@@ -9,3 +9,13 @@ def WorkPage(request):
 
     return render(request, 'Work/Work_page.html', {'experiences':experiences})
 
+
+def SingleWorkPage(request,pk):
+    single_work = Experiences.objects.get(id=pk)
+    techs = single_work.techs_used
+    techs = techs.replace(',',' ')
+    tech_list = techs.split()
+    print(tech_list)
+
+
+    return render(request,'Work/singleWork_page.html',{'single_work':single_work, 'tech_list':tech_list})
